Prevent horizontal scrolling

--- a/src/main.css
+++ b/src/main.css
@@ -150,7 +150,8 @@ h6 {
     padding: 1rem;
     gap: 1rem;
 
-    overflow: auto;
+    overflow-x: clip;
+    overflow-y: auto;
 
     border: 1px solid black;
     border-radius: 2rem;
